[metadata]
name = luogu
version = 0.0.1
author = 汪心禾
author_email = wangxinhe06@gmail.com
description = A model-based Python implement for Luogu API client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/piterator-org/pyluogu
project_urls =
    Bug Tracker = https://github.com/piterator-org/pyluogu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
python_requires = >=3.6

[options.packages.find]
where = src
